--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "eslint-plugin-import": "^2.16.0",
     "history": "^4.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
